--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "flowbite-react": "^0.11.8",
     "fs": "^0.0.1-security",
+    "gsap": "^3.13.0",
     "motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
